add about page, small improvements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <span>Acquire Rights</span>
       </a>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
         <li><a href="#">Certifications</a></li>
         <li><a href="#">Donators</a></li>
         <li><a href="#" class="donate-btn">Donate Now</a></li>
@@ -184,6 +184,12 @@
   </footer>
 
   <script src="index.js"></script>
+  <script src="scripts/stickyHeader.js"></script>
+  <script src="scripts/progressBar.js"></script>
+  <script src="scripts/donorList.js"></script>
+  <script src="scripts/detailsTable.js"></script>
+  <script src="scripts/productGrid.js"></script>
+  <script src="scripts/carousel.js"></script>
 </body>
 
 </html>
