add certificate page modal

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
-        <li><a href="#">Certifications</a></li>
+        <li><a href="/certifications.html">Certifications</a></li>
         <li><a href="#">Donators</a></li>
         <li><a href="#" class="donate-btn">Donate Now</a></li>
       </ul>
